# focus-timer-revery

./: .gitignore  App.opam  AppJs.opam  README.md  ThirdPartyLicenses.txt  package.json  test.json
.ci/: esy-build-steps.yml
assets/: dune
docs/: PLAY_SOUND.md
esy.lock/: index.json
sdl-audio/: audio.h  dune  sdl2-audio-caml.c  sdl2-audio-caml.h  simple-sdl2-audio.c
src/: App.re  FocusTimer.re  Settings.ml  TimerLogic.ml  dune
src/components/: AppButton.re  AppProvider.re  Clock.re  Root.re  Theme.ml  Timer.re  dune
src/core/: Core.re  CoreTypes.re  Effect.re  Store.re  Subscription.re  dune
src/models/: Settings.ml  TimeInterval.ml  TimerModel.ml  dune
src/sdl-audio/: audio.c
src/store/: AppActions.re  AppStore.re  TimerLogic.ml  TimerState.re  TimerStore.ml  dune
src/utils/: Audio.ml  Utils.re  dune
test/: RunTests.re  TimeIntervalTests.re  TimerStoreTests.re  dune
test.esy.lock/: index.json
