(library
    (name FocusTimer)
    (public_name FocusTimer.lib)
    (preprocess (pps brisk-reconciler.ppx))
    (flags (-w +26))
    (libraries 
        bigarray
        SdlAudio
        threads.posix
        sdl2
        FocusTimer_Utils
        FocusTimer_Core
        FocusTimer_Store
        FocusTimer_Components
        Revery)
    (modules (:standard \ App )))

(executable
    (package FocusTimer)
    (name App)
    (public_name App.exe)
    (libraries FocusTimer.lib)
    (modules App)
)
