(library
   (name FocusTimerTest)
   (public_name FocusTimerTest.lib)
   (ocamlopt_flags -linkall -g)
   (flags -w -26 -w -9)
   (libraries rely.lib FocusTimer.lib)
   (modules (:standard \ RunTests ))
)

(executable
  (package FocusTimerTest)
  (name RunTests)
  (public_name RunTests.exe)
  (libraries
    FocusTimerTest.lib
  )
  (modules RunTests)
)
